# QuantPilotP

./: main.py  pyproject.toml
src/quantpilot/: __main__.py
src/quantpilot/akshare/: m.py  t1.py  t2.py  t3.py
src/quantpilot/config/: settings.py
src/quantpilot/data/: akshare_client.py  cache.py  datasource.py
src/quantpilot/utils/: logger.py
