[project]
name = "quantpilotp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.3,<3",
    "pandas>=2.3,<3",
    "scipy>=1.16,<2",
    "yfinance>=0.2",
    "akshare>=1.18",
    "streamlit>=1.45",
    "plotly>=6.0",
    "matplotlib>=3.10",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.1",
    "loguru>=0.7",
    "quantstats>=0.0.77",
    "seaborn>=0.13.2",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
    "at>=0.0.3",
    "ta>=0.11.0",
    "requests>=2.34.2",
    "urllib3>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["quantpilot"]
